Add basic auth template and completed swagger documentation for customer CRUD
